# codex-test

./: README.md  pyproject.toml
docs/: event-model.md  operability.md
src/document_pipeline/: __init__.py  events.py  policy.py  read_model.py
src/document_platform/: __init__.py  event_store.py  events.py  models.py  pipeline.py  validation.py
tests/: test_pipeline.py  test_policy.py  test_read_model.py
